Replace to new SPDX library with function import/export SBOM
Signed-off-by: namnp <nam1.nguyenphuong@toshiba.co.jp>